force word wrap in portlet lists to avoid text bleeding

--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -64,6 +64,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    word-wrap: break-word;
     // > li:first-child {
     //     border-top: 1px dotted darken(#82ADBF, 20%);
     // }
