--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -3736,6 +3736,7 @@ a.next {
   padding: 0;
   margin: 0;
   list-style: none;
+  word-wrap: break-word;
 }
 .portlet-item {
   padding: 0 0 5px 0;
